Change author name

--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -4,7 +4,7 @@
 	"version": "2.61.2",
 	"minAppVersion": "0.12.0",
 	"description": "Publish your notes to the web for others to enjoy. For free.",
-	"author": "Ole Eskild Steensen",
+	"author": "retiarylime",
 	"authorUrl": "https://dg-docs.ole.dev/",
 	"isDesktopOnly": false,
 	"fundingUrl": "https://ko-fi.com/oleeskild"
